fix overflow after clicking an image

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 	font-size: 16px;
 	background: #bebefa;
 	color: #242424;
-	overflow-x: hidden;
+	overflow-x: hidden !important;
 }
 
 html {
